$Id: NEWS,v 1.611 2004-10-01 00:43:30 castaglia Exp $

CVS
--------------------------------
- Bug 2449 - ProFTPD silently ignores extra command-line parameters
- Bug 2457 - Directory listing provides bad info when path ends with /.
- Bug 2458 - Bad handling of CreateHome parameters.
- Bug 2463 - mod_xfer doesn't check how many bytes it has written to disk.
- Bug 2476 - Incorrect detection of symbolic link loop across devices.
- Add support for a -V command-line option, which displays various
  compile-time settings.
- Bug 2455 - Allow fine-tuning of how often mod_xfer updates the scoreboard.
  This adds an --enable-scoreboard-updates configure option.
- Bug 2389 - 64-bit compilation warnings.
- Bug 2468 - Ability to disable address/port collision checking.  A new
  command-line option, -N, can be used to disable proftpd's checks for
  <VirtualHost> address/port collisions.
- Bug 2488 - Wrong order of privs calls on HP generates "unable to setregid()"
  error (Bug #2317 revisited).
- Bug 2392 - mod_sql needs better handling of its backend modules.
- Daniel Weuthen <dw@megabit.net> contributed a SuSE-specific init.d script
  for ProFTPD.
- Bug 2485 - SQL backend modules close all open connections too early.
  This fixes a bug where a "signal 11" would be reported, when a session
  ends, if the "EXIT" SQLLog command was configured.
- New mod_ldap version 2.8.13
- Bug 2490 - <Limit ALL> affects PORT command.  When the EPRT, EPSV, PASV,
  and PORT commands became <Limit>able (see Bug #2086), they became
  affected by <Limit ALL> as well, which breaks older configurations.
  Using the following configuration:

    <Limit PORT PASV>
      AllowAll
    </Limit>

  is a way to workaround this bug in 1.2.10 installations.
- Bug 2492 - Off-by-one error in FreeBSD PAM username length check.

1.2.10 - Released 04-Sep-2004
--------------------------------
- Bug 2440 - Unable to use PAM authentication properly.  Use a "*" after